--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,3 +11,11 @@ target 'MLCommonUI_Example' do
     pod 'FBSnapshotTestCase'
   end
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '10.0'
+    end
+  end
+end
